--- a/ui/animationform.ui
+++ b/ui/animationform.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>771</width>
-    <height>360</height>
+    <height>427</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -105,7 +105,7 @@
    <property name="geometry">
     <rect>
      <x>640</x>
-     <y>60</y>
+     <y>100</y>
      <width>57</width>
      <height>22</height>
     </rect>
@@ -115,7 +115,7 @@
    <property name="geometry">
     <rect>
      <x>570</x>
-     <y>60</y>
+     <y>100</y>
      <width>57</width>
      <height>22</height>
     </rect>
@@ -125,7 +125,7 @@
    <property name="geometry">
     <rect>
      <x>590</x>
-     <y>40</y>
+     <y>80</y>
      <width>16</width>
      <height>16</height>
     </rect>
@@ -144,7 +144,7 @@
    <property name="geometry">
     <rect>
      <x>660</x>
-     <y>40</y>
+     <y>80</y>
      <width>16</width>
      <height>16</height>
     </rect>
@@ -163,7 +163,7 @@
    <property name="geometry">
     <rect>
      <x>609</x>
-     <y>210</y>
+     <y>230</y>
      <width>61</width>
      <height>25</height>
     </rect>
@@ -185,7 +185,7 @@
    <property name="geometry">
     <rect>
      <x>670</x>
-     <y>270</y>
+     <y>290</y>
      <width>57</width>
      <height>25</height>
     </rect>
@@ -195,7 +195,7 @@
    <property name="geometry">
     <rect>
      <x>550</x>
-     <y>270</y>
+     <y>290</y>
      <width>57</width>
      <height>25</height>
     </rect>
@@ -205,7 +205,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>270</y>
+     <y>290</y>
      <width>41</width>
      <height>25</height>
     </rect>
@@ -227,7 +227,7 @@
    <property name="geometry">
     <rect>
      <x>610</x>
-     <y>300</y>
+     <y>320</y>
      <width>57</width>
      <height>25</height>
     </rect>
@@ -237,7 +237,7 @@
    <property name="geometry">
     <rect>
      <x>510</x>
-     <y>270</y>
+     <y>290</y>
      <width>41</width>
      <height>25</height>
     </rect>
@@ -259,7 +259,7 @@
    <property name="geometry">
     <rect>
      <x>610</x>
-     <y>240</y>
+     <y>260</y>
      <width>57</width>
      <height>25</height>
     </rect>
@@ -269,7 +269,7 @@
    <property name="geometry">
     <rect>
      <x>610</x>
-     <y>330</y>
+     <y>350</y>
      <width>61</width>
      <height>25</height>
     </rect>
@@ -291,7 +291,7 @@
    <property name="geometry">
     <rect>
      <x>520</x>
-     <y>200</y>
+     <y>220</y>
      <width>21</width>
      <height>16</height>
     </rect>
@@ -304,7 +304,7 @@
    <property name="geometry">
     <rect>
      <x>520</x>
-     <y>60</y>
+     <y>100</y>
      <width>41</width>
      <height>21</height>
     </rect>
@@ -320,7 +320,7 @@
    <property name="geometry">
     <rect>
      <x>520</x>
-     <y>150</y>
+     <y>190</y>
      <width>41</width>
      <height>16</height>
     </rect>
@@ -346,7 +346,7 @@
    <property name="geometry">
     <rect>
      <x>570</x>
-     <y>150</y>
+     <y>190</y>
      <width>57</width>
      <height>22</height>
     </rect>
@@ -356,7 +356,7 @@
    <property name="geometry">
     <rect>
      <x>640</x>
-     <y>150</y>
+     <y>190</y>
      <width>57</width>
      <height>22</height>
     </rect>
@@ -366,7 +366,7 @@
    <property name="geometry">
     <rect>
      <x>710</x>
-     <y>60</y>
+     <y>100</y>
      <width>57</width>
      <height>22</height>
     </rect>
@@ -376,7 +376,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>40</y>
+     <y>80</y>
      <width>16</width>
      <height>16</height>
     </rect>
@@ -441,7 +441,7 @@
    <property name="geometry">
     <rect>
      <x>520</x>
-     <y>120</y>
+     <y>160</y>
      <width>41</width>
      <height>16</height>
     </rect>
@@ -457,7 +457,7 @@
    <property name="geometry">
     <rect>
      <x>570</x>
-     <y>120</y>
+     <y>160</y>
      <width>57</width>
      <height>22</height>
     </rect>
@@ -467,7 +467,7 @@
    <property name="geometry">
     <rect>
      <x>640</x>
-     <y>120</y>
+     <y>160</y>
      <width>57</width>
      <height>22</height>
     </rect>
@@ -500,7 +500,7 @@
    <property name="geometry">
     <rect>
      <x>710</x>
-     <y>90</y>
+     <y>130</y>
      <width>57</width>
      <height>22</height>
     </rect>
@@ -510,7 +510,7 @@
    <property name="geometry">
     <rect>
      <x>640</x>
-     <y>90</y>
+     <y>130</y>
      <width>57</width>
      <height>22</height>
     </rect>
@@ -520,7 +520,7 @@
    <property name="geometry">
     <rect>
      <x>570</x>
-     <y>90</y>
+     <y>130</y>
      <width>57</width>
      <height>22</height>
     </rect>
@@ -530,13 +530,39 @@
    <property name="geometry">
     <rect>
      <x>520</x>
-     <y>90</y>
+     <y>130</y>
      <width>41</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
     <string>Rot</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBox_image_no">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>60</y>
+     <width>74</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_image">
+   <property name="geometry">
+    <rect>
+     <x>520</x>
+     <y>60</y>
+     <width>41</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Image</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
