--- a/ui/animationform.ui
+++ b/ui/animationform.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>771</width>
-    <height>568</height>
+    <height>440</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,13 +19,13 @@
   <property name="minimumSize">
    <size>
     <width>771</width>
-    <height>371</height>
+    <height>440</height>
    </size>
   </property>
   <property name="baseSize">
    <size>
     <width>771</width>
-    <height>371</height>
+    <height>440</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -37,7 +37,7 @@
      <x>130</x>
      <y>50</y>
      <width>381</width>
-     <height>301</height>
+     <height>371</height>
     </rect>
    </property>
    <property name="sizePolicy">
@@ -73,7 +73,6 @@
       <height>297</height>
      </rect>
     </property>
-    <zorder>commandLinkButton</zorder>
    </widget>
   </widget>
   <widget class="QSpinBox" name="spinBox_nowSequence">
@@ -164,7 +163,7 @@
    <property name="geometry">
     <rect>
      <x>609</x>
-     <y>230</y>
+     <y>240</y>
      <width>61</width>
      <height>25</height>
     </rect>
@@ -186,7 +185,7 @@
    <property name="geometry">
     <rect>
      <x>670</x>
-     <y>290</y>
+     <y>300</y>
      <width>57</width>
      <height>25</height>
     </rect>
@@ -196,7 +195,7 @@
    <property name="geometry">
     <rect>
      <x>550</x>
-     <y>290</y>
+     <y>300</y>
      <width>57</width>
      <height>25</height>
     </rect>
@@ -206,7 +205,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>290</y>
+     <y>300</y>
      <width>41</width>
      <height>25</height>
     </rect>
@@ -228,7 +227,7 @@
    <property name="geometry">
     <rect>
      <x>610</x>
-     <y>320</y>
+     <y>330</y>
      <width>57</width>
      <height>25</height>
     </rect>
@@ -238,7 +237,7 @@
    <property name="geometry">
     <rect>
      <x>510</x>
-     <y>290</y>
+     <y>300</y>
      <width>41</width>
      <height>25</height>
     </rect>
@@ -260,7 +259,7 @@
    <property name="geometry">
     <rect>
      <x>610</x>
-     <y>260</y>
+     <y>270</y>
      <width>57</width>
      <height>25</height>
     </rect>
@@ -270,7 +269,7 @@
    <property name="geometry">
     <rect>
      <x>610</x>
-     <y>350</y>
+     <y>360</y>
      <width>61</width>
      <height>25</height>
     </rect>
@@ -292,7 +291,7 @@
    <property name="geometry">
     <rect>
      <x>520</x>
-     <y>220</y>
+     <y>230</y>
      <width>21</width>
      <height>16</height>
     </rect>
@@ -307,7 +306,7 @@
      <x>10</x>
      <y>50</y>
      <width>111</width>
-     <height>301</height>
+     <height>371</height>
     </rect>
    </property>
   </widget>
@@ -482,7 +481,7 @@
   <widget class="QComboBox" name="comboBox_image_no">
    <property name="geometry">
     <rect>
-     <x>570</x>
+     <x>560</x>
      <y>60</y>
      <width>74</width>
      <height>22</height>
@@ -494,7 +493,7 @@
     <rect>
      <x>520</x>
      <y>60</y>
-     <width>41</width>
+     <width>31</width>
      <height>21</height>
     </rect>
    </property>
@@ -509,7 +508,7 @@
    <property name="geometry">
     <rect>
      <x>560</x>
-     <y>220</y>
+     <y>230</y>
      <width>111</width>
      <height>17</height>
     </rect>
@@ -585,6 +584,166 @@
      <string>Scale</string>
     </property>
    </widget>
+  </widget>
+  <widget class="QLabel" name="label_loop">
+   <property name="geometry">
+    <rect>
+     <x>640</x>
+     <y>60</y>
+     <width>31</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Loop</string>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="spinBox_loop">
+   <property name="geometry">
+    <rect>
+     <x>670</x>
+     <y>60</y>
+     <width>51</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="minimum">
+    <number>-1</number>
+   </property>
+   <property name="maximum">
+    <number>1024</number>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_color">
+   <property name="geometry">
+    <rect>
+     <x>520</x>
+     <y>410</y>
+     <width>31</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Color</string>
+   </property>
+  </widget>
+  <widget class="Line" name="line_0">
+   <property name="geometry">
+    <rect>
+     <x>580</x>
+     <y>220</y>
+     <width>118</width>
+     <height>3</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="Line" name="line_1">
+   <property name="geometry">
+    <rect>
+     <x>580</x>
+     <y>380</y>
+     <width>118</width>
+     <height>3</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_r">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>390</y>
+     <width>16</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>R</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_g">
+   <property name="geometry">
+    <rect>
+     <x>620</x>
+     <y>390</y>
+     <width>16</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>G</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_b">
+   <property name="geometry">
+    <rect>
+     <x>670</x>
+     <y>390</y>
+     <width>16</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>B</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_a">
+   <property name="geometry">
+    <rect>
+     <x>720</x>
+     <y>390</y>
+     <width>16</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>A</string>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="spinBox_r">
+   <property name="geometry">
+    <rect>
+     <x>560</x>
+     <y>410</y>
+     <width>46</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="spinBox_g">
+   <property name="geometry">
+    <rect>
+     <x>610</x>
+     <y>410</y>
+     <width>46</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="spinBox_b">
+   <property name="geometry">
+    <rect>
+     <x>660</x>
+     <y>410</y>
+     <width>46</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="spinBox_a">
+   <property name="geometry">
+    <rect>
+     <x>710</x>
+     <y>410</y>
+     <width>46</width>
+     <height>22</height>
+    </rect>
+   </property>
   </widget>
  </widget>
  <tabstops>
