--- a/Resource.qrc
+++ b/Resource.qrc
@@ -4,5 +4,7 @@
         <file>Resources/images/Button Play_32.png</file>
         <file>Resources/images/Button Stop_32.png</file>
         <file>Resources/lang/linguist_ja.qm</file>
+        <file>Resources/images/Button_Backward_32.png</file>
+        <file>Resources/images/Button_Forward_32.png</file>
     </qresource>
 </RCC>
