--- a/ui/animationform.ui
+++ b/ui/animationform.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>771</width>
+    <width>811</width>
     <height>440</height>
    </rect>
   </property>
@@ -18,13 +18,13 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>771</width>
+    <width>811</width>
     <height>440</height>
    </size>
   </property>
   <property name="baseSize">
    <size>
-    <width>771</width>
+    <width>811</width>
     <height>440</height>
    </size>
   </property>
@@ -78,7 +78,7 @@
   <widget class="QSpinBox" name="spinBox_nowSequence">
    <property name="geometry">
     <rect>
-     <x>520</x>
+     <x>600</x>
      <y>10</y>
      <width>57</width>
      <height>31</height>
@@ -428,9 +428,9 @@
   <widget class="QCheckBox" name="checkBox_grid">
    <property name="geometry">
     <rect>
-     <x>670</x>
+     <x>750</x>
      <y>10</y>
-     <width>81</width>
+     <width>61</width>
      <height>31</height>
     </rect>
    </property>
@@ -441,7 +441,7 @@
   <widget class="QComboBox" name="comboBox_fps">
    <property name="geometry">
     <rect>
-     <x>590</x>
+     <x>670</x>
      <y>10</y>
      <width>71</width>
      <height>31</height>
@@ -743,6 +743,52 @@
      <width>46</width>
      <height>22</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_backward">
+   <property name="geometry">
+    <rect>
+     <x>520</x>
+     <y>10</y>
+     <width>31</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset resource="../Resource.qrc">
+     <normaloff>:/root/Resources/images/Button_Backward_32.png</normaloff>:/root/Resources/images/Button_Backward_32.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>20</width>
+     <height>20</height>
+    </size>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_forward">
+   <property name="geometry">
+    <rect>
+     <x>560</x>
+     <y>10</y>
+     <width>31</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset resource="../Resource.qrc">
+     <normaloff>:/root/Resources/images/Button_Forward_32.png</normaloff>:/root/Resources/images/Button_Forward_32.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>20</width>
+     <height>20</height>
+    </size>
    </property>
   </widget>
  </widget>
