--- a/ui/animationform.ui
+++ b/ui/animationform.ui
@@ -431,7 +431,7 @@
      <x>750</x>
      <y>10</y>
      <width>61</width>
-     <height>31</height>
+     <height>16</height>
     </rect>
    </property>
    <property name="text">
@@ -789,6 +789,19 @@
      <width>20</width>
      <height>20</height>
     </size>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkBox_frame">
+   <property name="geometry">
+    <rect>
+     <x>750</x>
+     <y>30</y>
+     <width>41</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>枠</string>
    </property>
   </widget>
  </widget>
