--- a/ui/animationform.ui
+++ b/ui/animationform.ui
@@ -85,7 +85,7 @@
     </rect>
    </property>
    <property name="maximum">
-    <number>99</number>
+    <number>1024</number>
    </property>
   </widget>
   <widget class="QSlider" name="horizontalSlider_nowSequence">
@@ -96,6 +96,9 @@
      <width>381</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="maximum">
+    <number>1024</number>
    </property>
    <property name="orientation">
     <enum>Qt::Horizontal</enum>
