--- a/ui/OptionAnimationTab.ui
+++ b/ui/OptionAnimationTab.ui
@@ -7,13 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>304</width>
-    <height>105</height>
+    <height>162</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>304</width>
-    <height>105</height>
+    <height>162</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -90,6 +90,71 @@
      <height>20</height>
     </rect>
    </property>
+  </widget>
+  <widget class="QGroupBox" name="groupBox">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>100</y>
+     <width>241</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>画面サイズ</string>
+   </property>
+   <widget class="QSpinBox" name="spinBox_scrw">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>20</y>
+      <width>46</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>9999</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>20</y>
+      <width>16</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>w</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spinBox_scrh">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>20</y>
+      <width>46</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>9999</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>20</y>
+      <width>16</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>h</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
