--- a/ui/animationform.ui
+++ b/ui/animationform.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>811</width>
-    <height>440</height>
+    <height>461</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,7 +19,7 @@
   <property name="minimumSize">
    <size>
     <width>811</width>
-    <height>440</height>
+    <height>461</height>
    </size>
   </property>
   <property name="baseSize">
@@ -37,7 +37,7 @@
      <x>130</x>
      <y>50</y>
      <width>381</width>
-     <height>371</height>
+     <height>401</height>
     </rect>
    </property>
    <property name="sizePolicy">
@@ -156,7 +156,7 @@
    <property name="geometry">
     <rect>
      <x>609</x>
-     <y>240</y>
+     <y>260</y>
      <width>61</width>
      <height>25</height>
     </rect>
@@ -178,7 +178,7 @@
    <property name="geometry">
     <rect>
      <x>670</x>
-     <y>300</y>
+     <y>320</y>
      <width>57</width>
      <height>25</height>
     </rect>
@@ -188,7 +188,7 @@
    <property name="geometry">
     <rect>
      <x>550</x>
-     <y>300</y>
+     <y>320</y>
      <width>57</width>
      <height>25</height>
     </rect>
@@ -198,7 +198,7 @@
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>300</y>
+     <y>320</y>
      <width>41</width>
      <height>25</height>
     </rect>
@@ -220,7 +220,7 @@
    <property name="geometry">
     <rect>
      <x>610</x>
-     <y>330</y>
+     <y>350</y>
      <width>57</width>
      <height>25</height>
     </rect>
@@ -230,7 +230,7 @@
    <property name="geometry">
     <rect>
      <x>510</x>
-     <y>300</y>
+     <y>320</y>
      <width>41</width>
      <height>25</height>
     </rect>
@@ -252,7 +252,7 @@
    <property name="geometry">
     <rect>
      <x>610</x>
-     <y>270</y>
+     <y>290</y>
      <width>57</width>
      <height>25</height>
     </rect>
@@ -262,7 +262,7 @@
    <property name="geometry">
     <rect>
      <x>610</x>
-     <y>360</y>
+     <y>380</y>
      <width>61</width>
      <height>25</height>
     </rect>
@@ -284,7 +284,7 @@
    <property name="geometry">
     <rect>
      <x>520</x>
-     <y>230</y>
+     <y>250</y>
      <width>21</width>
      <height>16</height>
     </rect>
@@ -299,7 +299,7 @@
      <x>10</x>
      <y>50</y>
      <width>111</width>
-     <height>371</height>
+     <height>401</height>
     </rect>
    </property>
   </widget>
@@ -494,7 +494,7 @@
    <property name="geometry">
     <rect>
      <x>560</x>
-     <y>230</y>
+     <y>250</y>
      <width>111</width>
      <height>17</height>
     </rect>
@@ -509,7 +509,7 @@
      <x>510</x>
      <y>100</y>
      <width>61</width>
-     <height>111</height>
+     <height>141</height>
     </rect>
    </property>
    <property name="title">
@@ -548,7 +548,7 @@
     <property name="geometry">
      <rect>
       <x>4</x>
-      <y>62</y>
+      <y>63</y>
       <width>51</width>
       <height>17</height>
      </rect>
@@ -568,6 +568,19 @@
     </property>
     <property name="text">
      <string>Scale</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButton_path">
+    <property name="geometry">
+     <rect>
+      <x>4</x>
+      <y>123</y>
+      <width>51</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Path</string>
     </property>
    </widget>
   </widget>
@@ -604,7 +617,7 @@
    <property name="geometry">
     <rect>
      <x>520</x>
-     <y>410</y>
+     <y>430</y>
      <width>31</width>
      <height>21</height>
     </rect>
@@ -617,7 +630,7 @@
    <property name="geometry">
     <rect>
      <x>580</x>
-     <y>220</y>
+     <y>240</y>
      <width>118</width>
      <height>3</height>
     </rect>
@@ -630,7 +643,7 @@
    <property name="geometry">
     <rect>
      <x>580</x>
-     <y>380</y>
+     <y>400</y>
      <width>118</width>
      <height>3</height>
     </rect>
@@ -643,7 +656,7 @@
    <property name="geometry">
     <rect>
      <x>570</x>
-     <y>390</y>
+     <y>410</y>
      <width>16</width>
      <height>16</height>
     </rect>
@@ -656,7 +669,7 @@
    <property name="geometry">
     <rect>
      <x>620</x>
-     <y>390</y>
+     <y>410</y>
      <width>16</width>
      <height>16</height>
     </rect>
@@ -669,7 +682,7 @@
    <property name="geometry">
     <rect>
      <x>670</x>
-     <y>390</y>
+     <y>410</y>
      <width>16</width>
      <height>16</height>
     </rect>
@@ -682,7 +695,7 @@
    <property name="geometry">
     <rect>
      <x>720</x>
-     <y>390</y>
+     <y>410</y>
      <width>16</width>
      <height>16</height>
     </rect>
@@ -695,7 +708,7 @@
    <property name="geometry">
     <rect>
      <x>560</x>
-     <y>410</y>
+     <y>430</y>
      <width>46</width>
      <height>22</height>
     </rect>
@@ -705,7 +718,7 @@
    <property name="geometry">
     <rect>
      <x>610</x>
-     <y>410</y>
+     <y>430</y>
      <width>46</width>
      <height>22</height>
     </rect>
@@ -715,7 +728,7 @@
    <property name="geometry">
     <rect>
      <x>660</x>
-     <y>410</y>
+     <y>430</y>
      <width>46</width>
      <height>22</height>
     </rect>
@@ -725,7 +738,7 @@
    <property name="geometry">
     <rect>
      <x>710</x>
-     <y>410</y>
+     <y>430</y>
      <width>46</width>
      <height>22</height>
     </rect>
@@ -807,7 +820,7 @@
    <property name="geometry">
     <rect>
      <x>760</x>
-     <y>410</y>
+     <y>430</y>
      <width>21</width>
      <height>18</height>
     </rect>
