--- a/ui/animationform.ui
+++ b/ui/animationform.ui
@@ -864,6 +864,19 @@
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
    </property>
   </widget>
+  <widget class="QCheckBox" name="checkBox_linear_filter">
+   <property name="geometry">
+    <rect>
+     <x>750</x>
+     <y>70</y>
+     <width>76</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>なめらか</string>
+   </property>
+  </widget>
  </widget>
  <tabstops>
   <tabstop>pushButton_play</tabstop>
