いらないファイル削除 文字コードをUTF8,改行コードをLFに変更

--- a/ui/curveeditorform.ui
+++ b/ui/curveeditorform.ui
@@ -39,7 +39,7 @@
     </rect>
    </property>
    <property name="widgetResizable">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
   </widget>
  </widget>
