--- a/ui/animationform.ui
+++ b/ui/animationform.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>811</width>
-    <height>497</height>
+    <height>461</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -78,26 +78,6 @@
     <number>9999</number>
    </property>
   </widget>
-  <widget class="QSpinBox" name="spinBox_pos_y">
-   <property name="geometry">
-    <rect>
-     <x>640</x>
-     <y>100</y>
-     <width>57</width>
-     <height>22</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QSpinBox" name="spinBox_pos_x">
-   <property name="geometry">
-    <rect>
-     <x>570</x>
-     <y>100</y>
-     <width>57</width>
-     <height>22</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_x">
    <property name="geometry">
     <rect>
@@ -140,7 +120,7 @@
    <property name="geometry">
     <rect>
      <x>609</x>
-     <y>260</y>
+     <y>270</y>
      <width>61</width>
      <height>25</height>
     </rect>
@@ -158,31 +138,11 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QSpinBox" name="spinBox_uv_right">
-   <property name="geometry">
-    <rect>
-     <x>670</x>
-     <y>320</y>
-     <width>57</width>
-     <height>25</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QSpinBox" name="spinBox_uv_left">
-   <property name="geometry">
-    <rect>
-     <x>550</x>
-     <y>320</y>
-     <width>57</width>
-     <height>25</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_uv_right">
    <property name="geometry">
     <rect>
      <x>730</x>
-     <y>320</y>
+     <y>330</y>
      <width>41</width>
      <height>25</height>
     </rect>
@@ -200,21 +160,11 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QSpinBox" name="spinBox_uv_bottom">
-   <property name="geometry">
-    <rect>
-     <x>610</x>
-     <y>350</y>
-     <width>57</width>
-     <height>25</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_uv_left">
    <property name="geometry">
     <rect>
      <x>510</x>
-     <y>320</y>
+     <y>330</y>
      <width>41</width>
      <height>25</height>
     </rect>
@@ -230,16 +180,6 @@
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
-   </property>
-  </widget>
-  <widget class="QSpinBox" name="spinBox_uv_top">
-   <property name="geometry">
-    <rect>
-     <x>610</x>
-     <y>290</y>
-     <width>57</width>
-     <height>25</height>
-    </rect>
    </property>
   </widget>
   <widget class="QLabel" name="label_uv_bottom">
@@ -268,7 +208,7 @@
    <property name="geometry">
     <rect>
      <x>520</x>
-     <y>250</y>
+     <y>260</y>
      <width>21</width>
      <height>16</height>
     </rect>
@@ -292,32 +232,46 @@
     <rect>
      <x>570</x>
      <y>190</y>
-     <width>57</width>
+     <width>71</width>
      <height>22</height>
     </rect>
    </property>
    <property name="autoFillBackground">
     <bool>true</bool>
    </property>
+   <property name="decimals">
+    <number>3</number>
+   </property>
+   <property name="minimum">
+    <double>-9999.998999999999796</double>
+   </property>
+   <property name="maximum">
+    <double>9999.998999999999796</double>
+   </property>
+   <property name="singleStep">
+    <double>0.001000000000000</double>
+   </property>
   </widget>
   <widget class="QDoubleSpinBox" name="doubleSpinBox_scale_y">
    <property name="geometry">
     <rect>
-     <x>640</x>
+     <x>650</x>
      <y>190</y>
-     <width>57</width>
+     <width>71</width>
      <height>22</height>
     </rect>
    </property>
-  </widget>
-  <widget class="QSpinBox" name="spinBox_pos_z">
-   <property name="geometry">
-    <rect>
-     <x>710</x>
-     <y>100</y>
-     <width>57</width>
-     <height>22</height>
-    </rect>
+   <property name="decimals">
+    <number>3</number>
+   </property>
+   <property name="minimum">
+    <double>-9999.998999999999796</double>
+   </property>
+   <property name="maximum">
+    <double>9999.998999999999796</double>
+   </property>
+   <property name="singleStep">
+    <double>0.001000000000000</double>
    </property>
   </widget>
   <widget class="QLabel" name="label_z">
@@ -385,26 +339,6 @@
     </size>
    </property>
   </widget>
-  <widget class="QSpinBox" name="spinBox_center_x">
-   <property name="geometry">
-    <rect>
-     <x>570</x>
-     <y>160</y>
-     <width>57</width>
-     <height>22</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QSpinBox" name="spinBox_center_y">
-   <property name="geometry">
-    <rect>
-     <x>640</x>
-     <y>160</y>
-     <width>57</width>
-     <height>22</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QCheckBox" name="checkBox_grid">
    <property name="geometry">
     <rect>
@@ -416,36 +350,6 @@
    </property>
    <property name="text">
     <string>グリッド</string>
-   </property>
-  </widget>
-  <widget class="QSpinBox" name="spinBox_rot_z">
-   <property name="geometry">
-    <rect>
-     <x>710</x>
-     <y>130</y>
-     <width>57</width>
-     <height>22</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QSpinBox" name="spinBox_rot_y">
-   <property name="geometry">
-    <rect>
-     <x>640</x>
-     <y>130</y>
-     <width>57</width>
-     <height>22</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QSpinBox" name="spinBox_rot_x">
-   <property name="geometry">
-    <rect>
-     <x>570</x>
-     <y>130</y>
-     <width>57</width>
-     <height>22</height>
-    </rect>
    </property>
   </widget>
   <widget class="QComboBox" name="comboBox_image_no">
@@ -478,7 +382,7 @@
    <property name="geometry">
     <rect>
      <x>560</x>
-     <y>250</y>
+     <y>260</y>
      <width>111</width>
      <height>17</height>
     </rect>
@@ -614,7 +518,7 @@
    <property name="geometry">
     <rect>
      <x>580</x>
-     <y>240</y>
+     <y>250</y>
      <width>118</width>
      <height>3</height>
     </rect>
@@ -913,6 +817,280 @@
     <enum>Qt::Horizontal</enum>
    </property>
   </widget>
+  <widget class="QDoubleSpinBox" name="doubleSpinBox_pos_z">
+   <property name="geometry">
+    <rect>
+     <x>730</x>
+     <y>100</y>
+     <width>71</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="decimals">
+    <number>3</number>
+   </property>
+   <property name="minimum">
+    <double>-9999.998999999999796</double>
+   </property>
+   <property name="maximum">
+    <double>9999.998999999999796</double>
+   </property>
+   <property name="singleStep">
+    <double>0.001000000000000</double>
+   </property>
+  </widget>
+  <widget class="QDoubleSpinBox" name="doubleSpinBox_pos_x">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>100</y>
+     <width>71</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="autoFillBackground">
+    <bool>true</bool>
+   </property>
+   <property name="decimals">
+    <number>3</number>
+   </property>
+   <property name="minimum">
+    <double>-9999.998999999999796</double>
+   </property>
+   <property name="maximum">
+    <double>9999.998999999999796</double>
+   </property>
+   <property name="singleStep">
+    <double>0.001000000000000</double>
+   </property>
+  </widget>
+  <widget class="QDoubleSpinBox" name="doubleSpinBox_pos_y">
+   <property name="geometry">
+    <rect>
+     <x>650</x>
+     <y>100</y>
+     <width>71</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="decimals">
+    <number>3</number>
+   </property>
+   <property name="minimum">
+    <double>-9999.998999999999796</double>
+   </property>
+   <property name="maximum">
+    <double>9999.998999999999796</double>
+   </property>
+   <property name="singleStep">
+    <double>0.001000000000000</double>
+   </property>
+  </widget>
+  <widget class="QDoubleSpinBox" name="doubleSpinBox_rot_x">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>130</y>
+     <width>71</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="autoFillBackground">
+    <bool>true</bool>
+   </property>
+   <property name="decimals">
+    <number>3</number>
+   </property>
+   <property name="minimum">
+    <double>-360.000000000000000</double>
+   </property>
+   <property name="maximum">
+    <double>360.000000000000000</double>
+   </property>
+   <property name="singleStep">
+    <double>0.001000000000000</double>
+   </property>
+  </widget>
+  <widget class="QDoubleSpinBox" name="doubleSpinBox_rot_y">
+   <property name="geometry">
+    <rect>
+     <x>650</x>
+     <y>130</y>
+     <width>71</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="decimals">
+    <number>3</number>
+   </property>
+   <property name="minimum">
+    <double>-360.000000000000000</double>
+   </property>
+   <property name="maximum">
+    <double>360.000000000000000</double>
+   </property>
+   <property name="singleStep">
+    <double>0.001000000000000</double>
+   </property>
+  </widget>
+  <widget class="QDoubleSpinBox" name="doubleSpinBox_rot_z">
+   <property name="geometry">
+    <rect>
+     <x>730</x>
+     <y>130</y>
+     <width>71</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="decimals">
+    <number>3</number>
+   </property>
+   <property name="minimum">
+    <double>-360.000000000000000</double>
+   </property>
+   <property name="maximum">
+    <double>360.000000000000000</double>
+   </property>
+   <property name="singleStep">
+    <double>0.001000000000000</double>
+   </property>
+  </widget>
+  <widget class="QDoubleSpinBox" name="doubleSpinBox_center_y">
+   <property name="geometry">
+    <rect>
+     <x>650</x>
+     <y>160</y>
+     <width>71</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="decimals">
+    <number>3</number>
+   </property>
+   <property name="minimum">
+    <double>-9999.998999999999796</double>
+   </property>
+   <property name="maximum">
+    <double>9999.998999999999796</double>
+   </property>
+   <property name="singleStep">
+    <double>0.001000000000000</double>
+   </property>
+  </widget>
+  <widget class="QDoubleSpinBox" name="doubleSpinBox_center_x">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>160</y>
+     <width>71</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="autoFillBackground">
+    <bool>true</bool>
+   </property>
+   <property name="decimals">
+    <number>3</number>
+   </property>
+   <property name="minimum">
+    <double>-9999.998999999999796</double>
+   </property>
+   <property name="maximum">
+    <double>9999.998999999999796</double>
+   </property>
+   <property name="singleStep">
+    <double>0.001000000000000</double>
+   </property>
+  </widget>
+  <widget class="QDoubleSpinBox" name="doubleSpinBox_uv_top">
+   <property name="geometry">
+    <rect>
+     <x>610</x>
+     <y>300</y>
+     <width>71</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="decimals">
+    <number>3</number>
+   </property>
+   <property name="maximum">
+    <double>4096.000000000000000</double>
+   </property>
+   <property name="singleStep">
+    <double>1.000000000000000</double>
+   </property>
+  </widget>
+  <widget class="QDoubleSpinBox" name="doubleSpinBox_uv_left">
+   <property name="geometry">
+    <rect>
+     <x>560</x>
+     <y>330</y>
+     <width>71</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="decimals">
+    <number>3</number>
+   </property>
+   <property name="maximum">
+    <double>4096.000000000000000</double>
+   </property>
+   <property name="singleStep">
+    <double>1.000000000000000</double>
+   </property>
+  </widget>
+  <widget class="QDoubleSpinBox" name="doubleSpinBox_uv_bottom">
+   <property name="geometry">
+    <rect>
+     <x>610</x>
+     <y>360</y>
+     <width>71</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="decimals">
+    <number>3</number>
+   </property>
+   <property name="maximum">
+    <double>4096.000000000000000</double>
+   </property>
+   <property name="singleStep">
+    <double>1.000000000000000</double>
+   </property>
+  </widget>
+  <widget class="QDoubleSpinBox" name="doubleSpinBox_uv_right">
+   <property name="geometry">
+    <rect>
+     <x>650</x>
+     <y>330</y>
+     <width>71</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="decimals">
+    <number>3</number>
+   </property>
+   <property name="maximum">
+    <double>4096.000000000000000</double>
+   </property>
+   <property name="singleStep">
+    <double>1.000000000000000</double>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_del_path">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>220</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>パス削除</string>
+   </property>
+  </widget>
  </widget>
  <customwidgets>
   <customwidget>
@@ -928,20 +1106,8 @@
   <tabstop>checkBox_grid</tabstop>
   <tabstop>treeView</tabstop>
   <tabstop>scrollArea_anime</tabstop>
-  <tabstop>spinBox_pos_x</tabstop>
-  <tabstop>spinBox_pos_y</tabstop>
-  <tabstop>spinBox_pos_z</tabstop>
-  <tabstop>spinBox_rot_x</tabstop>
-  <tabstop>spinBox_rot_y</tabstop>
-  <tabstop>spinBox_rot_z</tabstop>
-  <tabstop>spinBox_center_x</tabstop>
-  <tabstop>spinBox_center_y</tabstop>
   <tabstop>doubleSpinBox_scale_x</tabstop>
   <tabstop>doubleSpinBox_scale_y</tabstop>
-  <tabstop>spinBox_uv_top</tabstop>
-  <tabstop>spinBox_uv_left</tabstop>
-  <tabstop>spinBox_uv_right</tabstop>
-  <tabstop>spinBox_uv_bottom</tabstop>
  </tabstops>
  <resources>
   <include location="../Resource.qrc"/>
