コンパイルエラー解消。テクスチャ表示されない問題残ってる。

--- a/Resource.qrc
+++ b/Resource.qrc
@@ -8,5 +8,8 @@
         <file>Resources/images/Button_Forward_32.png</file>
         <file>Resources/images/Arrow_Up.png</file>
         <file>Resources/images/Arrow_Down.png</file>
+        <file>Resources/lang/linguist_ja.ts</file>
+        <file>Resources/shaders/texture_f.glsl</file>
+        <file>Resources/shaders/texture_v.glsl</file>
     </qresource>
 </RCC>
